<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_new_tab"
        android:title="@string/new_tab"
        android:icon="@drawable/ic_add_tab"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_bookmark_add"
        android:title="@string/add_bookmark"
        android:icon="@drawable/ic_bookmark_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_more"
        android:title="@string/more"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/menu_bookmarks"
                android:title="@string/bookmarks" />
            <item
                android:id="@+id/menu_history"
                android:title="@string/history" />
            <item
                android:id="@+id/menu_desktop_site"
                android:title="@string/desktop_site"
                android:checkable="true" />
            <item
                android:id="@+id/menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/menu_clear_data"
                android:title="@string/clear_data" />
            <item
                android:id="@+id/menu_settings"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
